[metadata]
name = csv_trans
version = 0.0.2
author = Saeed Ahmad
author_email = saeedahmad.icp@gmail.com
description = A package for translating csv files across multiple languages
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ML-Dev-Hub/universal-translator-for-csv-files
project_urls =
    Bug Tracker = https://github.com/ML-Dev-Hub/universal-translator-for-csv-files/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
package_dir =
    = csv_trans
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src